# krabnik

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: board_representation.rs  main.rs  move_generation.rs
src/board_representation/: datatypes.rs  misc.rs  static_board.rs  staticboard.rs
src/move_generation/: legal_generator.rs  misc.rs  movable_board.rs  pseudolegal_generator.rs
